Update versions to match current dev